Move the Windows AppPlatform into its own folder.

--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -144,9 +144,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\source\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\Options.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -157,9 +154,6 @@
       <Filter>Source Files\App</Filter>
     </ClCompile>
     <ClCompile Include="..\source\App\AppPlatform.cpp">
-      <Filter>Source Files\App</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\App\AppPlatform_windows.cpp">
       <Filter>Source Files\App</Filter>
     </ClCompile>
     <ClCompile Include="..\source\App\Minecraft.cpp">
@@ -1056,6 +1050,12 @@
     <ClCompile Include="..\source\World\Renderer\FallingTileRenderer.cpp">
       <Filter>Source Files\World\Renderer\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="..\platforms\windows\AppPlatform_windows.cpp">
+      <Filter>Source Files\App</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platforms\windows\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Options.hpp">
@@ -1065,9 +1065,6 @@
       <Filter>Header Files\App</Filter>
     </ClInclude>
     <ClInclude Include="..\source\App\AppPlatform.hpp">
-      <Filter>Header Files\App</Filter>
-    </ClInclude>
-    <ClInclude Include="..\source\App\AppPlatform_windows.hpp">
       <Filter>Header Files\App</Filter>
     </ClInclude>
     <ClInclude Include="..\source\App\Minecraft.hpp">
@@ -1915,6 +1912,9 @@
     </ClInclude>
     <ClInclude Include="..\source\World\Renderer\FallingTileRenderer.hpp">
       <Filter>Header Files\World\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platforms\windows\AppPlatform_windows.hpp">
+      <Filter>Header Files\App</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
