* Move the main into the App filter.

--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -1054,7 +1054,7 @@
       <Filter>Source Files\App</Filter>
     </ClCompile>
     <ClCompile Include="..\platforms\windows\main.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\App</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
