--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -1056,6 +1056,9 @@
     <ClCompile Include="..\platforms\windows\main.cpp">
       <Filter>Source Files\App</Filter>
     </ClCompile>
+    <ClCompile Include="..\platforms\windows\SoundSystem_windows.cpp">
+      <Filter>Source Files\App</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Options.hpp">
@@ -1914,6 +1917,9 @@
       <Filter>Header Files\World\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="..\platforms\windows\AppPlatform_windows.hpp">
+      <Filter>Header Files\App</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platforms\windows\SoundSystem_windows.hpp">
       <Filter>Header Files\App</Filter>
     </ClInclude>
   </ItemGroup>
