* Add Player::drop

--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -1922,6 +1922,9 @@
     <ClInclude Include="..\platforms\windows\SoundSystem_windows.hpp">
       <Filter>Header Files\App</Filter>
     </ClInclude>
+    <ClInclude Include="..\GameMods.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\thirdparty\raknet\CMakeLists.txt">
