* Start work on ExternalFileLevelStorage

--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -1062,6 +1062,9 @@
     <ClCompile Include="..\source\World\RegionFile.cpp">
       <Filter>Source Files\World</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\World\Storage\ExternalFileLevelStorage.cpp">
+      <Filter>Source Files\World\Storage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Options.hpp">
@@ -1930,6 +1933,9 @@
     </ClInclude>
     <ClInclude Include="..\source\World\RegionFile.hpp">
       <Filter>Header Files\World</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\World\Storage\ExternalFileLevelStorage.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
