--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="..\source\World\Renderer\TntRenderer.hpp" />
     <ClInclude Include="..\source\World\Renderer\TripodCameraRenderer.hpp" />
     <ClInclude Include="..\source\World\Storage\ChunkStorage.hpp" />
+    <ClInclude Include="..\source\World\Storage\ExternalFileLevelStorage.hpp" />
     <ClInclude Include="..\source\World\Storage\LevelSource.hpp" />
     <ClInclude Include="..\source\World\Storage\LevelStorage.hpp" />
     <ClInclude Include="..\source\World\Storage\LevelStorageSource.hpp" />
@@ -472,6 +473,7 @@
     <ClCompile Include="..\source\World\Renderer\TntRenderer.cpp" />
     <ClCompile Include="..\source\World\Renderer\TripodCameraRenderer.cpp" />
     <ClCompile Include="..\source\World\Storage\ChunkStorage.cpp" />
+    <ClCompile Include="..\source\World\Storage\ExternalFileLevelStorage.cpp" />
     <ClCompile Include="..\source\World\Storage\LevelSource.cpp" />
     <ClCompile Include="..\source\World\Storage\LevelStorage.cpp" />
     <ClCompile Include="..\source\World\Storage\LevelStorageSource.cpp" />
