--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -1071,6 +1071,9 @@
     <ClCompile Include="..\source\GUI\Screen\SavingWorldScreen.cpp">
       <Filter>Source Files\GUI\Screen</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\GUI\Screen\CreateWorldScreen.cpp">
+      <Filter>Source Files\GUI\Screen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Options.hpp">
@@ -1947,6 +1950,9 @@
       <Filter>Header Files\World\Storage</Filter>
     </ClInclude>
     <ClInclude Include="..\source\GUI\Screen\SavingWorldScreen.hpp">
+      <Filter>Header Files\GUI\Screen</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\GUI\Screen\CreateWorldScreen.hpp">
       <Filter>Header Files\GUI\Screen</Filter>
     </ClInclude>
   </ItemGroup>
