--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -1077,6 +1077,15 @@
     <ClCompile Include="..\source\World\Renderer\ItemSpriteRenderer.cpp">
       <Filter>Source Files\World\Renderer\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\World\Tile\Sapling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\World\Tile\SpongeTile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\World\Tile\BookshelfTile.cpp">
+      <Filter>Source Files\World\Tile</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Options.hpp">
