* Decompile LargeFeature, LargeCaveFeature. Add in game for testing. * Rename Random::nextTLong to Random::nextLong

--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -125,6 +125,8 @@
     <ClInclude Include="..\source\World\Generator\ChunkCache.hpp" />
     <ClInclude Include="..\source\World\Generator\ChunkSource.hpp" />
     <ClInclude Include="..\source\World\Generator\Feature.hpp" />
+    <ClInclude Include="..\source\World\Generator\LargeCaveFeature.hpp" />
+    <ClInclude Include="..\source\World\Generator\LargeFeature.hpp" />
     <ClInclude Include="..\source\World\Generator\PerformanceTestChunkSource.hpp" />
     <ClInclude Include="..\source\World\Generator\RandomLevelSource.hpp" />
     <ClInclude Include="..\source\World\Generator\TestChunkSource.hpp" />
@@ -433,6 +435,8 @@
     <ClCompile Include="..\source\World\Generator\ClayFeature.cpp" />
     <ClCompile Include="..\source\World\Generator\Feature.cpp" />
     <ClCompile Include="..\source\World\Generator\FlowerFeature.cpp" />
+    <ClCompile Include="..\source\World\Generator\LargeCaveFeature.cpp" />
+    <ClCompile Include="..\source\World\Generator\LargeFeature.cpp" />
     <ClCompile Include="..\source\World\Generator\OreFeature.cpp" />
     <ClCompile Include="..\source\World\Generator\PerformanceTestChunkSource.cpp" />
     <ClCompile Include="..\source\World\Generator\PineFeature.cpp" />
