Improved Platform Definitions
Renamed Platform_Definitions.hpp to PlatformDefinitions.hpp
Added platform specific preprocessor definitions that allow for switching between different sound systems to PlatformDefinitions.hpp

--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ClInclude Include="..\compat\AKeyCodes.hpp" />
     <ClInclude Include="..\GameMods.hpp" />
+    <ClInclude Include="..\platforms\PlatformDefinitions.hpp" />
     <ClInclude Include="..\platforms\windows\AppPlatform_windows.hpp" />
     <ClInclude Include="..\platforms\windows\SoundSystem_windows.hpp" />
     <ClInclude Include="..\source\App\App.hpp" />
