--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -91,6 +91,9 @@
     <Filter Include="source\platforms\windows">
       <UniqueIdentifier>{4cc1a780-f0a9-41b1-bee2-dc28f00fb958}</UniqueIdentifier>
     </Filter>
+    <Filter Include="source\platforms\openal">
+      <UniqueIdentifier>{cc57a0f6-733d-44fa-8478-b1826b074d66}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\thirdparty\raknet\ThreadsafePacketLogger.h">
@@ -983,6 +986,9 @@
     </ClInclude>
     <ClInclude Include="..\platforms\PlatformDefinitions.hpp">
       <Filter>source\platforms</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platforms\openal\SoundSystemAL.hpp">
+      <Filter>source\platforms\openal</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1939,6 +1945,9 @@
     </ClCompile>
     <ClCompile Include="..\compat\GLExt.cpp">
       <Filter>thirdparty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platforms\openal\SoundSystemAL.cpp">
+      <Filter>source\platforms\openal</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
