Update sdl/CMakeLists.txt for new OpenAL stuff

--- a/platforms/sdl/CMakeLists.txt
+++ b/platforms/sdl/CMakeLists.txt
@@ -30,7 +30,7 @@ endif()
 add_executable(reminecraftpe
     main.cpp
     AppPlatform_sdl.cpp
-    SoundSystemAL.cpp
+    ../OpenAL/SoundSystemAL.cpp
 )
 
 # Core
